--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     <title>Girls Painting the Town - Professional House Painting Services</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+  <input type="text" name="name" />
+  <input type="email" name="email" />
+  <input type="tel" name="phone" />
+  <select name="service">
+    <option></option>
+  </select>
+  <textarea name="details"></textarea>
+</form>
+
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
